<resources>
    <string name="app_name">Beautiful_Family</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="AppName">Beautiful Life</string>
    <string name="user"> Your username</string>
    <string name="password"> Your password</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="forget">Forget</string>
    <string name="title_activity_mainpage">Mainpage</string>
    <string name="mainpage">Mainpage</string>
    <string name="share">Sharing</string>
    <string name="mine">Mine</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_blank">blankActivity</string>
</resources>
