<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:background="@drawable/flower1"
    android:layout_height="match_parent" tools:context="com.example.zero.family.LoginFragment">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:id="@+id/imageLogo"
        android:src="@drawable/sata"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/titleText"
        android:layout_alignStart="@+id/titleText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleText"
        android:layout_below="@+id/imageLogo"
        android:layout_centerHorizontal="true"
        android:text="@string/AppName"
        android:textSize="40sp"
        android:textColor="#FFFFFF"

        />

    <TextView
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_below="@+id/titleText"
        android:id="@+id/blank"


        />

    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/blank"

        >



        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/user"
            android:background="@android:color/transparent"
            android:id="@+id/user"


            />

        <EditText
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:id="@+id/username"
            android:layout_toRightOf="@+id/user"
            android:layout_alignBottom="@+id/user"
            android:layout_weight="1"
            android:hint="@string/user"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp"
            android:background="@drawable/draw"
            />


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/pw"
            android:background="@android:color/transparent"
            android:id="@+id/password"
            android:layout_below="@+id/user"

            />

        <EditText
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:id="@+id/pass"
            android:layout_toRightOf="@+id/password"
            android:layout_alignBottom="@+id/password"
            android:layout_weight="1"
            android:hint="@string/password"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp"
            android:background="@drawable/draw"
            android:inputType="textPassword"
            />

        <TextView
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:id="@+id/blank1"
            android:layout_below="@+id/pass"
            />


        <Button
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:id="@+id/Login"
            android:layout_below="@+id/blank1"
            android:layout_centerHorizontal="true"
            android:text="@string/login"
            android:background="#66CDAA"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:id="@+id/blank2"
            android:layout_below="@+id/Login"
            />

        <Button
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:id="@+id/register"
            android:layout_below="@+id/blank2"
            android:layout_alignLeft="@+id/Login"
            android:background="#66CDAA"
            android:text="@string/register"
            android:textSize="20sp"
            android:textColor="#FFFFFF"

            />

        <Button
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:id="@+id/forget"
            android:layout_below="@+id/blank2"
            android:layout_alignRight="@+id/Login"
            android:background="#66CDAA"
            android:text="@string/forget"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            />

        <TextView
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:id="@+id/blank3"
            android:layout_below="@+id/forget"
            />


    </RelativeLayout>

</RelativeLayout>
